@@ -1,4 +1,5 @@
 HEAD
+    + Added retries to the mount image section when deploying an scenario
     + Improved behavior of test retry/continue prompt
     + New anste-connect tool to easily SSH into deployed hosts
     + Avoid negative MAC address error
